// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`verifiers meet damaged input should refuse a damaged particle container 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Provided particle file is invalid: Invalid error: Chunk 0x00000003 at position 18 declares 1088704 bytes, beyond source end 500",
    "Check failed: 1 finding(s)",
  ],
  "stdout": [],
}
`;

exports[`verifiers meet damaged input should refuse a damaged spawn 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Provided spawn file is invalid: Invalid error: Chunk 0x00000001 at position 60 declares 67940 bytes, beyond source end 400",
    "Check failed: 1 finding(s)",
  ],
  "stdout": [],
}
`;

exports[`verifiers meet damaged input should refuse an unparseable icon configuration 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Provided system ltx is invalid: Ltx parse error: 2:1 Failed to parse section statement without closing bracket ']'",
    "Check failed: 1 finding(s)",
  ],
  "stdout": [],
}
`;

exports[`verifiers meet damaged input should report a damaged visual as a failed verification 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Check failed: 1 finding(s)",
  ],
  "stdout": [
    "Verifying ogf visuals in <sandbox>/bad.ogf",
    "Swept 1 visuals in <duration>",
    "Submeshes: 0 total, 0 packed, 0 unsupported, 0 malformed",
    "Progressive submeshes: 0, of which 0 draw only part of their index buffer",
    "Skinned submeshes: 0, vertices whose weights do not sum to one: 0",
    "Unreadable files: 1, files with nothing drawable: 0, bounds disagreements: 0",
    "Texture references: 0 total, 0 resolved, 0 missing, 0 unreadable, 0 visuals with no root",
    "Distinct textures: 0, of which 0 carry no mip chain; 0 references resolved inside archives and were not read",
    "Check 'read' is failed with 1 findings",
  ],
}
`;

exports[`verifiers meet damaged input should write nothing beyond the damaged inputs 1`] = `
[
  {
    "path": "bad.ogf",
    "sha256": "83adb76e4da181bc4040dd586f341f348976100451f0d5f82ddd6c8dca713780",
    "size": 200,
  },
  {
    "path": "bad.spawn",
    "sha256": "9cddce7d1333dca704eb6434be487985c58ed0bcd2ff1cb50441f1dd5153ed3b",
    "size": 400,
  },
  {
    "path": "bad.xr",
    "sha256": "47bf2c694e97c13ff1ac3a2fe9e165504c6fb4a4bfd04bcef3c56aad853b0ba8",
    "size": 500,
  },
  {
    "path": "broken.ltx",
    "sha256": "68fca290b625ab4e3516266e4d41abb093be37b1f029f738346f2b96f3c67541",
    "size": 37,
  },
]
`;
